Fix no-theme styling bugs
Add colors to modal, remove colors from settings menu
Style scrollbar when no theme is applied for panels

--- a/styles/engine/_extends.sass
+++ b/styles/engine/_extends.sass
@@ -27,10 +27,10 @@ $tt-filter-hard: "#topBG .roomListItem .roomDJs.needed .icon"
 
 $tt-gradient: "#buddyListHeader"
 
-$tt-bg-main: ".tab-item:active, .tab-item.selected, .dropdown .option a:hover, .room-tab .flat-button:hover, .floating-menu .option:hover, .floating-menu .option.special:hover, .split-option .options .option:hover, #ding-menu .option.selected, .split-option .options .option.selected, #playlist-dropdown .option.active, .song .scoregood, .options .option:hover, .guestOption.option:hover"
+$tt-bg-main: ".tab-item:active, .tab-item.selected, #settings .dropdown .option a:hover, .room-tab .flat-button:hover, .floating-menu .option:hover, .floating-menu .option.special:hover, .split-option .options .option:hover, #ding-menu .option.selected, .split-option .options .option.selected, #playlist-dropdown .option.active, .song .scoregood, .options .option:hover, .guestOption.option:hover, #overlay .modal"
 
 $tt-co-main: "#maindiv a, .buddyListRoom .buddyRoomName"
 
-$tt-co-lite: "#playlist #playlist-dropdown .option.active .playlist-label, #ding-menu .option:hover .description, .song .scoregood, .options .option:hover, #maindiv .guestOption.option:hover, #topBG .roomListItem:hover .listenNow"
+$tt-co-lite: "#playlist #playlist-dropdown .option.active .playlist-label, #ding-menu .option:hover .description, #settings .dropdown .option a:hover, .song .scoregood, .options .option:hover, #maindiv .guestOption.option:hover, #topBG .roomListItem:hover .listenNow"
 
-$tt-co-dark: ".invite-dj, .become-dj, #topBG .roomListItem:not(:hover) .listenNow, #buddyListContainer #buddyListHeader #buddyListTitle"
+$tt-co-dark: ".invite-dj, .become-dj, #topBG .roomListItem:not(:hover) .listenNow, #buddyListContainer #buddyListHeader #buddyListTitle, #settings .dropdown .option a"
