--- a/visual/_global.sass
+++ b/visual/_global.sass
@@ -21,6 +21,15 @@
 .profile .section.statslink
 	text-align: center !important
 
+::-webkit-scrollbar
+	width: 7px
+::-webkit-scrollbar-track
+	background: $bg-dark-3
+::-webkit-scrollbar-thumb
+	background: $bg-light-2
+::-webkit-scrollbar-thumb:hover
+	background: $c-mute
+
 // song counter
 #playlist-display em 
 	line-height: 27px
